--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>React Google Keep</title>
+    <title>React </title>
     <link
       href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
       rel="stylesheet"
